--- a/src/views/patrimonialPolicyForm.ejs
+++ b/src/views/patrimonialPolicyForm.ejs
@@ -103,17 +103,6 @@
                                             </div>
                                         </div>
                                         <div class="form-group">
-                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Moneda</label>
-                                                <div class="col-sm-9">
-                                                    <select class="form-control" name="tipo_moneda">
-                                                        <option selected value="0">Seleccione *</option>
-                                                            <option value="Bolivar">Bolivar</option>
-                                                            <option value="Dólar">Dólar</option>
-                                                    </select>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Vigencia desde</label>
                                                 <div class="col-sm-9">
                                                     <input 
@@ -127,13 +116,24 @@
                                             </div>
                                         </div>
                                         <div class="form-group">
-                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Prima</label>
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Moneda</label>
+                                                <div class="col-sm-9">
+                                                    <select class="form-control" name="tipo_moneda">
+                                                        <option selected value="0">Seleccione *</option>
+                                                            <option value="Bolivar">Bolivar</option>
+                                                            <option value="Dólar">Dólar</option>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Prima Anual</label>
                                                 <div class="col-sm-9">
                                                     <input 
                                                         type="number"
                                                         step="0.01"
-                                                        name="monto_prima"
-                                                        id="monto_prima"
+                                                        name="prima_anual_poliza"
+                                                        id="prima_anual_poliza"
                                                         placeholder="Prima *" 
                                                         class="form-control"
                                                         required
@@ -144,17 +144,7 @@
                                         <div class="form-group">
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Ramo</label>
                                                 <div class="col-sm-9">
-                                                    <select class="form-control" name="ramo_poliza">
-                                                        <option selected value="">Seleccione *</option>
-                                                        <option value="Patrimonial">Patrimonial</option>
-                                                    </select>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Producto</label>
-                                                <div class="col-sm-9">
-                                                    <select class="form-control" name="tipo_producto_poliza">
+                                                    <select class="form-control" name="tipo_ramo_poliza">
                                                         <option selected value="">Seleccione</option>
                                                         <option value="TRI">TRI</option>
                                                         <option value="RCG">RCG</option>
@@ -167,14 +157,16 @@
                                             </div>
                                         </div>
                                         <div class="form-group">
-                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Bonificación</label>
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Tasa</label>
                                                 <div class="col-sm-9">
                                                     <input 
-                                                        type="text"
-                                                        name="bonificacion_poliza"
-                                                        id="bonificacion_poliza"
-                                                        placeholder="Bonificación"
+                                                        type="number"
+                                                        step="0.01"
+                                                        name="tasa_poliza"
+                                                        id="tasa_poliza"
+                                                        placeholder="Tasa Póliza *" 
                                                         class="form-control"
+                                                        required
                                                     >
                                                 </div>
                                             </div>
@@ -243,24 +235,11 @@
                                             </div>
                                         </div>
                                         <div class="form-group">
-                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Tasa</label>
-                                                <div class="col-sm-9">
-                                                    <input 
-                                                        type="number"
-                                                        name="tasa_poliza"
-                                                        id="tasa_poliza"
-                                                        placeholder="Tasa Póliza *" 
-                                                        class="form-control"
-                                                        required
-                                                    >
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Deducible</label>
                                                 <div class="col-sm-9">
                                                     <input 
                                                         type="number"
+                                                        step="0.01"
                                                         name="deducible_poliza"
                                                         id="deducible_poliza"
                                                         placeholder="Deducible *" 
@@ -284,21 +263,6 @@
                                             </div>
                                         </div>
                                         <div class="form-group">
-                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Comisión</label>
-                                                <div class="col-sm-9">
-                                                    <input 
-                                                        type="number"
-                                                        step="0.01"
-                                                        name="comision_poliza"
-                                                        id="comision_poliza"
-                                                        placeholder="Comisión *"
-                                                        class="form-control"
-                                                        required
-                                                    >
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Aseguradora</label>
                                                 <div class="col-sm-9">
                                                     <select class="form-control" name="nombre_aseguradora">
@@ -311,13 +275,14 @@
                                             </div>
                                         </div>
                                         <div class="form-group">
-                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Cobertura</label>
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Suma Asegurada</label>
                                                 <div class="col-sm-9">
                                                     <input 
-                                                        type="text"
-                                                        name="cobertura_poliza"
-                                                        id="cobertura_poliza"
-                                                        placeholder="Cobertura *"
+                                                        type="number"
+                                                        step="0.01"
+                                                        name="suma_asegurada_poliza"
+                                                        id="suma_asegurada_poliza"
+                                                        placeholder="Suma Asegurada *"
                                                         class="form-control"
                                                         required
                                                     >
@@ -416,7 +381,7 @@
                                                             step="0.01" 
                                                             name="monto_prima_recibo"
                                                             id="monto_prima_recibo"
-                                                            value="<%= policy.monto_prima %>" 
+                                                            value="<%= policy.prima_anual_poliza %>" 
                                                             class="form-control"
                                                             required
                                                         >
@@ -440,6 +405,22 @@
                                                 </div>
                                             </div>
                                         <% } %>
+                                        <div class="form-group">
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Comisión Asociada</label>
+                                                <div class="col-sm-9">
+                                                    <input 
+                                                        type="number"
+                                                        step="0.01"
+                                                        name="comision_asociada_recibo"
+                                                        id="comision_asociada_recibo"
+                                                        onkeyup="pasarValor();"
+                                                        placeholder="Comisión Asociada *"
+                                                        class="form-control"
+                                                        required
+                                                    >
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="form-group">
@@ -449,6 +430,7 @@
                                                         <option selected value="">Seleccione *</option>
                                                         <option value="Emisión">Emisión</option>
                                                         <option value="Renovación">Renovación</option>
+                                                        <option value="Fraccionamiento">Fraccionamiento</option>
                                                     </select>
                                                 </div>
                                             </div>
@@ -467,17 +449,36 @@
                                             </div>
                                         </div>
                                         <div class="form-group">
-                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Forma de Pago</label>
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Método de Pago</label>
                                                 <div class="col-sm-9">
-                                                    <select class="form-control" name="forma_pago_recibo">
+                                                    <select class="form-control" name="metodo_pago_recibo">
                                                         <option selected value="">Seleccione *</option>
                                                         <option value="Transferencia">Transferencia</option>
                                                         <option value="Zelle">Zelle</option>
                                                         <option value="Efectivo">Efectivo</option>
                                                         <option value="Tarjeta de debito">Tarjeta de debito</option>
                                                         <option value="Tarjeta de crédito">Tarjeta de crédito</option>
+                                                        <option value="Paypal">Paypal</option>
+                                                        <option value="Deposito bancario">Deposito bancario</option>
+                                                        <option value="Financiamiento">Financiamiento</option>
                                                         <option value="Otros">Otros</option>
                                                     </select>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Bonificación</label>
+                                                <div class="col-sm-9">
+                                                    <input 
+                                                        type="number"
+                                                        step="0.01"
+                                                        name="bonificacion_recibo"
+                                                        id="bonificacion_recibo"
+                                                        onkeyup="pasarValor();"
+                                                        placeholder="Bonificación *"
+                                                        class="form-control"
+                                                        required
+                                                    >
                                                 </div>
                                             </div>
                                         </div>
@@ -489,7 +490,7 @@
                                                         step="0.01" 
                                                         name="monto_comision_recibo"
                                                         id="monto_comision_recibo"
-                                                        placeholder="Monto comisión *" 
+                                                        placeholder="Comisión *" 
                                                         class="form-control"
                                                         required
                                                     >
